# remote-desktop

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  download_flutter.sh  extract_flutter.py  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cloud/crates/audit/: Cargo.toml
cloud/crates/auth/: Cargo.toml
cloud/crates/auth/src/: lib.rs
cloud/crates/gateway/: Cargo.toml
cloud/crates/gateway/src/: lib.rs  main.rs
cloud/crates/permission/: Cargo.toml
cloud/crates/permission/src/: lib.rs
cloud/crates/registry/: Cargo.toml
cloud/crates/signaling-svc/: Cargo.toml
cloud/crates/signaling-svc/src/: lib.rs  main.rs
cloud/deploy/: .env.example  Caddyfile  Dockerfile.signaling  README.md  acceptance_check.sh  acceptance_up.sh  docker-compose.nodomain.yml  docker-compose.yml  turnserver.conf
core/crates/rdcore-app/: Cargo.toml
core/crates/rdcore-app/src/: connection_lifecycle.rs  file_transfer.rs  host_audio.rs  host_media.rs  lib.rs
core/crates/rdcore-app/tests/: e2e_connection.rs  e2e_host_agent.rs  e2e_lifecycle.rs  e2e_media_input.rs  real_vps_probe.rs
core/crates/rdcore-audio/: Cargo.toml
core/crates/rdcore-audio/src/: lib.rs  real.rs
core/crates/rdcore-banner/: Cargo.toml  build.rs
core/crates/rdcore-banner/src/: consent_impl.rs  lib.rs  macos_native.rs  main.rs  native.rs
core/crates/rdcore-capture/: Cargo.toml
core/crates/rdcore-capture/src/: lib.rs  real.rs
core/crates/rdcore-consent/: Cargo.toml
core/crates/rdcore-consent/src/: lib.rs
core/crates/rdcore-decode/: Cargo.toml
core/crates/rdcore-decode/src/: lib.rs
core/crates/rdcore-desktop/: Cargo.toml
core/crates/rdcore-desktop/src/: agent.rs  banner.rs  config.rs  main.rs  service.rs  service_macos.rs  token_db.rs
core/crates/rdcore-encode/: Cargo.toml
core/crates/rdcore-encode/examples/: enc_bench.rs  hw_smoke.rs
core/crates/rdcore-encode/src/: annexb.rs  capability.rs  ffmpeg_hw.rs  lib.rs
core/crates/rdcore-ffi/: Cargo.toml
core/crates/rdcore-ffi/src/: lib.rs
core/crates/rdcore-ffi/tests/: ffi_ctypes_smoke.py  real_connection_e2e.rs
core/crates/rdcore-loopback/: Cargo.toml
core/crates/rdcore-loopback/src/: fake.rs  lib.rs  tests.rs  traits.rs  transport.rs
core/crates/rdcore-media/: Cargo.toml
core/crates/rdcore-media/src/: lib.rs
core/crates/rdcore-render/: Cargo.toml
core/crates/rdcore-rtc/: Cargo.toml
core/crates/rdcore-rtc/src/: lib.rs  real.rs  video_rtp.rs
core/crates/rdcore-rtc/tests/: e2e_real_p2p.rs  e2e_turn_relay.rs  ice_diag.rs
core/crates/rdcore-session/: Cargo.toml
core/crates/rdcore-session/src/: lib.rs
core/crates/rdcore-signaling/: Cargo.toml
core/crates/rdcore-signaling/src/: lib.rs
core/crates/rdcore-signaling/tests/: e2e.rs
core/crates/rdcore-viewer-cli/: Cargo.toml
core/crates/rdcore-viewer-cli/src/: main.rs
docs/: ffmpeg_hw_lowfloor.md  media_pipeline.md  plan_iphone_windows_public.md  roadmap.md  双轨对齐_2026-07-20.md  双轨开发契约.md
docs/架构图/: 架构说明.md
flutter/: NATIVE_FFI.md  README.md  analysis_options.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/integration_test/: smoke_test.dart
flutter/ios/: RUST_FFI_INTEGRATION.md
flutter/ios/Flutter/: Debug.xcconfig  Release.xcconfig
flutter/ios/Runner/: AppDelegate.swift  Info.plist  RdCoreTexturePlugin.swift
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/app/: connection_manager.dart
flutter/lib/connection/: clipboard_client.dart  connection_backend.dart  connection_controller.dart  demo_session.dart  file_transfer_client.dart  local_identity.dart  mock_connection.dart  native_connection.dart  native_rtc_connection.dart  pairing.dart  signaling.dart  websocket_signaling.dart
flutter/lib/ffi/: rdcore_bindings.dart  rdcore_texture.dart
flutter/lib/models/: app_settings.dart  connection_state.dart  consent_scope.dart  default_config.dart  media_frame.dart  peer_identity.dart  remote_input.dart  security_indicator.dart
flutter/lib/ui/: clipboard_panel.dart  consent_dialog.dart  (+9 more)
flutter/linux/: CMakeLists.txt
flutter/preview/: remote_screen_preview.html
flutter/test/: audio_backend_test.dart  audio_controller_test.dart  audio_frame_test.dart  connection_controller_test.dart  connection_manager_test.dart  ffi_real_smoke_test.dart  gui_e2e_smoke_test.dart  media_input_backend_test.dart  native_media_integration_test.dart  pairing_test.dart  remote_screen_media_test.dart
flutter/windows/: CMakeLists.txt
scripts/: _run_installer_build.sh  _vcpkg_resilient_install.ps1  build_cloud.sh  build_desktop.sh  build_ffi_release.cmd  build_ffmpeg_lowfloor.ps1  build_flutter_win.cmd  build_installer_nsis.sh  check_ffi.cmd  export_diagrams.sh  flutter_run_profile.sh  package_mac.sh  pub_mirror.ps1  pub_mirror.sh
scripts/installer/: installer.nsi
shared/rdcore-crypto/: Cargo.toml
shared/rdcore-crypto/src/: lib.rs
shared/rdcore-identity/: Cargo.toml
shared/rdcore-identity/src/: lib.rs  persist.rs
shared/rdcore-proto/: Cargo.toml
shared/rdcore-proto/src/: error.rs  frame.rs  lib.rs  message.rs  tests.rs
tool/: build_ffi.sh  sync_flutter_config.py
web/: .gitignore  README.md
web/app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/deploy/: Caddyfile  README.md  build-dist.sh
web/rdcore-web/: Cargo.toml
web/rdcore-web/src/: handshake.rs  identity.rs  lib.rs  pipeline.rs
web/rdcore-web/tests/: interop.rs  testvectors.rs
web/smoke/: README.md  debug_input.mjs  probe-token-race.mjs  result-audio.json  result-autoreconnect.json  result-clipboard.json  result-filetransfer.json  result-input.json  result-realcapture.json  result-reconnect-host.json  result-reconnect.json  result.json  run_smoke.sh  smoke.mjs
web/smoke/probe-host/: Cargo.toml
web/smoke/probe-host/src/: main.rs
web/testvectors/: crypto.json  fragment.json  identity.json  interop.json  messages.json  parity.mjs
(+27 files in other folders)
