[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication service: credential store + Ed25519-signed access tokens."
license = "AGPL-3.0-only"

[dependencies]
rdcore-crypto = { path = "../../../shared/rdcore-crypto" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
