[package]
name = "permission"
version = "0.1.0"
edition = "2021"
description = "Permission service (access scope policies for devices)."
license = "AGPL-3.0-only"

[dependencies]
# 复用 auth::Scope 作为权限范围的唯一真源，避免与 Flutter ConsentScope / auth 令牌
# claims.scopes 出现命名漂移。
auth = { path = "../auth" }

[dev-dependencies]
serde_json = "1"
